# advent-of-code

./: .gitignore  README.md  requirements.txt  setup.cfg
src/adventofcode/: cubes_conundrum.py  data_collection.py  digits_collection.py  gear_ratios.py  settings.py  setup_console.py  trebuchet_calibrations.py
