[metadata]
name = advent-of-code
version = 0.0
url = https://github.com/george-karalis/advent-of-code
author = Random Python User
maintainer = Not planning on doing that
maintainer_email = hopefully@notmine.com
description = Solving the 25 Advent of Code puzzles
long_description = file: README.metadata
license = MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = true
python_requires = >=3.8
setup_requires =
    setuptools-scm
install_requires =
    pandas
    pdbpp
    pyarrow
    word2number
